# IlliniRM

./: .gitignore  README.md
2016_old_buff_benchmark/: 2016_benchmark.py
Website/: aboutrobomaster.html  aboutrobomaster2.html  aboutus.html  index.html  members.html
WiFi/: README.md
alvin_detection_test/: .gitignore  grid-detect.ipynb  runcam.py
armor-pipeline/: aimbot_data_generator.ipynb  armor-detect.ipynb  color_dection_visualization.ipynb  colordetect.py  colordetect3.py  data_generator.py  samplecamread.py  video_process.ipynb
buff_benchmark/: .gitignore  README.md  benchmark.py  benchmark.py.old  benchmark_cv.py  buff_benchmark_comm.py  digit_displayer.py  gpio_num_display_aux.py  gpio_num_display_main.py  new_benchmark.py  runcam.py  stats_ploter.html  stats_ploter.rmd  training_red_num_generator.py
caffe/: Makefile  Makefile.config  README.md
communication/: IRM_com_protocol.md  protocal.py  uart.py
dafu-pipeline/: .gitignore  gpio.py  grid-detect.ipynb  grid-detect.py  num_recog.py  red-secret.ipynb  runcam.py
demo/buff_demo/: gpio.py  (+5 more)
eric_colordetection/: bounding-box.ipynb  color_dection_visualization.ipynb  colordetect.py  colortrack.py  process.sh
fast-impl/: CMakeLists.txt
jetson-inference/: CMakeLists.txt
jetson-inference-master/: CMakeLists.txt  README.md  imageNet.cpp  tensorNet.cpp
proto-pipeline/: README.md  buff_benchmark_comm.py  grid-detect.ipynb  grid-detect.py  roger-grid-detect.ipynb  roger-grid-detect.py
proto-pipeline/cpp-tx2/: CMakeLists.txt  grid-detect.cpp
realsense/: README.md  map_transform.py
realsense/pcl_example/: CMakeLists.txt  main.cpp
test_cuda/: CMakeLists.txt  test_cuda.cpp
(+96 files in other folders)
